kubernetes/apps/ai/mcp-servers/outline/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-mcp
spec:
  hostnames:
    - outline-mcp.ds47.dev
  parentRefs:
    - name: kgateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: mcp-outline-mcp-proxy
          port: 8080
